...
                android:id="@+id/email"
                style="@style/text_layout_edit_text"
                android:layout_below="@id/cardLogo"
                app:hintTextAppearance="@style/TextLabel">

                <EditText
                    android:id="@+id/edtEmail"
                    style="@style/reg_edit_text"
                    android:drawableStart="@drawable/ic_mail"
                    android:hint="@string/email_label"

                    android:inputType="textEmailAddress"
                    android:onTextChanged="@{register::onTextChanged}"
...
                app:hintTextAppearance="@style/TextLabel"
                app:passwordToggleDrawable="@drawable/password_toggle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <EditText
                    android:id="@+id/edtPassword"
                    style="@style/reg_edit_text"
                    android:drawableStart="@drawable/ic_lock"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:onTextChanged="@{register::onPasswordChanged}"
                    android:text="@={register.strPassword}"
...
                app:hintTextAppearance="@style/TextLabel"
                app:passwordToggleDrawable="@drawable/password_toggle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <EditText
                    android:id="@+id/edtConfirmPassword"
                    style="@style/reg_edit_text"
                    android:drawableStart="@drawable/ic_check_circle_blue"
                    android:hint="@string/confirm_password_label"
                    android:inputType="textPassword"
                    android:onTextChanged="@{register::onConfirmPasswordChanged}"
                    android:text="@={register.strConfirmPassword}"
...
                android:id="@+id/phone"
                style="@style/text_layout_edit_text"
                android:layout_below="@id/confirmPassword"
                app:hintTextAppearance="@style/TextLabel">

                <EditText
                    android:id="@+id/edtPhone"
                    style="@style/reg_edit_text"
                    android:drawableStart="@drawable/ic_smartphone"
                    android:hint="@string/phone_optional"
                    android:inputType="phone"
                    android:imeOptions="actionGo"
                    android:text="@={register.strPhoneNumber}"
...
