...
                app:hintTextAppearance="@style/TextLabel"
                app:passwordToggleDrawable="@drawable/password_toggle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/icon_color">

                <EditText
                    android:id="@+id/edtNewPassword"
                    style="@style/create_user_edit_text"
                    android:drawableStart="@drawable/ic_lock"
                    android:hint="@string/new_password_label"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:textColor="@color/icon_color"
...
                app:hintTextAppearance="@style/TextLabel"
                app:passwordToggleDrawable="@drawable/password_toggle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/icon_color">

                <EditText
                    android:id="@+id/edtConfirmNewPassword"
                    style="@style/create_user_edit_text"
                    android:drawableStart="@drawable/ic_check_circle_blue"
                    android:hint="@string/confirm_password_label"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:textColor="@color/icon_color"
...
