...
                    android:layout_below="@id/training"
                    android:layout_marginTop="75dp"
                    app:errorEnabled="true"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/edtName"
                        style="@style/create_user_edit_text"
                        android:drawableStart="@drawable/ic_man_user_colored"
                        android:hint="@string/name_label"
                        android:inputType="text"
                        android:onTextChanged="@{createUser::onNameChanged}"
                        android:text="@={createUser.strName}"
...
                    android:textSize="18sp"
                    android:theme="@style/spinnerTheme"
                    android:visibility="gone" />


                <Button
                    android:id="@+id/btnCreate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/spnAccessLevel"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
...
